--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-matplotlib==3.10.0
-numpy==2.2.2
-pandas==2.2.3
-seaborn==0.13.2
+numpy
+pandas
+scikit-learn
+matplotlib
+seaborn
+scipy
+streamlit
+plotly
